--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,11 +36,11 @@ jobs:
 
     - name: Install npm dependencies
       run: npm install
-      working-directory: ./web
+      working-directory: .
 
     - name: JS
       run: npm run build
-      working-directory: ./web
+      working-directory: .
 
     - name: Deploy to uberspace
       run: rsync -e ssh -azvhP -r . uberspace:/var/www/virtual/guido/exhibition.mixing-senses.art/
