FIX/.github/workflows/deploy.yml: correct working dir for rsync

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,4 +44,4 @@ jobs:
 
     - name: Deploy to uberspace
       run: rsync -e ssh -azvhP -r . uberspace:/var/www/virtual/guido/exhibition.mixing-senses.art/
-      working-directory: ./web/public
+      working-directory: ./public
