--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   "homepage": "https://mixing-senses.art",
   "devDependencies": {
     "cssnano": "^4.1.10",
+    "glslify-bundle": "^5.1.1",
+    "glslify-deps": "^1.3.1",
+    "parcel-plugin-static-files-copy": "^2.5.0",
     "sass": "^1.26.11"
   },
   "dependencies": {
