--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "sass": "^1.26.11"
   },
   "dependencies": {
+    "@tweenjs/tween.js": "^18.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
