--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "mixing-senses.art exhibition frame",
   "main": "src/html/index.html",
   "scripts": {
-    "dev": "NODE_ENV=development && npx parcel src/html/index.html",
+    "dev": "npx webpack-dev-server --open --hot --mode development --env.NODE_ENV=development",
     "build": "npx parcel build src/html/index.html --out-dir public/"
   },
   "repository": {
@@ -19,14 +19,33 @@
   },
   "homepage": "https://mixing-senses.art",
   "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.5",
+    "@tweenjs/tween.js": "^18.6.4",
+    "babel-loader": "^8.2.1",
+    "copy-webpack-plugin": "^6.3.0",
+    "css-loader": "^5.0.1",
     "cssnano": "^4.1.10",
+    "favicons-webpack-plugin": "^4.2.0",
+    "file-loader": "^6.2.0",
+    "glslify": "^7.1.1",
     "glslify-bundle": "^5.1.1",
     "glslify-deps": "^1.3.1",
+    "glslify-import-loader": "^0.1.2",
+    "glslify-loader": "^2.0.0",
+    "html-webpack-plugin": "^4.5.0",
     "parcel-plugin-static-files-copy": "^2.5.0",
-    "sass": "^1.26.11"
+    "raw-loader": "^4.0.2",
+    "sass": "^1.26.11",
+    "sass-loader": "^10.1.0",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.4.0",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.11.0",
+    "workbox-webpack-plugin": "^5.1.4"
   },
   "dependencies": {
-    "@tweenjs/tween.js": "^18.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
