--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/js/index.html",
   "scripts": {
     "dev": "npx webpack-dev-server --open --hot --mode development --env.NODE_ENV=development",
-    "build": "npx parcel build src/html/index.html --out-dir public/"
+    "build": "npx webpack --config webpack.config.production.js --env.production --env.NODE_ENV=production --progress"
   },
   "repository": {
     "type": "git",
@@ -24,7 +24,8 @@
     "@babel/preset-react": "^7.12.5",
     "@tweenjs/tween.js": "^18.6.4",
     "babel-loader": "^8.2.1",
-    "copy-webpack-plugin": "^6.3.0",
+    "blueimp-md5": "^2.18.0",
+    "copy-webpack-plugin": "^6.3.1",
     "css-loader": "^5.0.1",
     "cssnano": "^4.1.10",
     "favicons-webpack-plugin": "^4.2.0",
@@ -39,20 +40,20 @@
     "parcel-plugin-static-files-copy": "^2.5.0",
     "poisson-disk-sampling": "^2.2.2",
     "raw-loader": "^4.0.2",
+    "react-router-dom": "^5.2.0",
     "react-svg-loader": "^3.0.3",
-    "sass": "^1.26.11",
+    "sass": "^1.29.0",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
-    "webpack": "^5.4.0",
-    "webpack-cli": "^3.3.10",
+    "webpack": "^4.4.0",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
     "workbox-webpack-plugin": "^5.1.4"
   },
   "dependencies": {
     "@loadable/component": "^5.14.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0",
-    "three": "^0.120.1"
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "three": "^0.122.0"
   }
 }
