--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,3 +35,13 @@ jobs:
     - name: JS
       run: npm run build
       working-directory: .
+
+    - name: rsync deployments
+      uses: burnett01/rsync-deployments@4.1
+      with:
+        switches: -avzr --delete
+        path: build/
+        remote_path: /var/www/virtual/guido/exhibition.mixing-senses.art/
+        remote_host: suhail.uberspace.de
+        remote_user: gschmidt
+        remote_key: ${{ secrets.SSH_KEY }}
