--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,7 +41,7 @@ jobs:
       with:
         switches: -avzr --delete
         path: build/
-        remote_path: /var/www/virtual/guido/exhibition.mixing-senses.art/
-        remote_host: suhail.uberspace.de
-        remote_user: guido
+        remote_path: ${{ secrets.REMOTE_TARGET }}
+        remote_host: ${{ secrets.REMOTE_HOST }}
+        remote_user: ${{ secrets.REMOTE_USER }}
         remote_key: ${{ secrets.SSH_KEY }}
