--- a/package.json
+++ b/package.json
@@ -19,20 +19,20 @@
   },
   "homepage": "https://mixing-senses.art",
   "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/preset-env": "^7.12.1",
-    "@babel/preset-react": "^7.12.5",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.10",
+    "@babel/preset-react": "^7.12.10",
     "@tweenjs/tween.js": "^18.6.4",
-    "babel-loader": "^8.2.1",
+    "babel-loader": "^8.2.2",
     "blueimp-md5": "^2.18.0",
-    "copy-webpack-plugin": "^6.3.1",
+    "copy-webpack-plugin": "^6.4.0",
     "css-loader": "^5.0.1",
     "cssnano": "^4.1.10",
     "favicons-webpack-plugin": "^4.2.0",
     "file-loader": "^6.2.0",
     "glslify": "^7.1.1",
     "glslify-bundle": "^5.1.1",
-    "glslify-deps": "^1.3.1",
+    "glslify-deps": "^1.3.2",
     "glslify-import-loader": "^0.1.2",
     "glslify-loader": "^2.0.0",
     "html-webpack-plugin": "^4.5.0",
@@ -42,8 +42,9 @@
     "raw-loader": "^4.0.2",
     "react-router-dom": "^5.2.0",
     "react-svg-loader": "^3.0.3",
-    "sass": "^1.29.0",
+    "sass": "^1.30.0",
     "sass-loader": "^10.1.0",
+    "shelljs": "^0.8.4",
     "style-loader": "^2.0.0",
     "webpack": "^4.4.0",
     "webpack-cli": "^3.3.12",
