DEL/.gitmodules, EDIT/src/sass: restructure sass folder
+ basic responsive design

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/preset-env": "^7.12.10",
     "@babel/preset-react": "^7.12.10",
     "@tweenjs/tween.js": "^18.6.4",
+    "@vi.son/rouge": "^1.0.2",
     "babel-loader": "^8.2.2",
     "blueimp-md5": "^2.18.0",
     "copy-webpack-plugin": "^6.4.0",
