--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@babel/preset-env": "^7.12.10",
     "@babel/preset-react": "^7.12.10",
     "@tweenjs/tween.js": "^18.6.4",
-    "@vi.son/rouge": "^1.0.2",
+    "@vi.son/rouge": "^1.0.4",
     "babel-loader": "^8.2.2",
     "blueimp-md5": "^2.18.0",
     "copy-webpack-plugin": "^6.4.0",
@@ -54,6 +54,7 @@
   },
   "dependencies": {
     "@loadable/component": "^5.14.1",
+    "@vi.son/components": "file:../components",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "three": "^0.122.0"
