--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
   },
   "dependencies": {
     "@loadable/component": "^5.14.1",
-    "@vi.son/components": "^0.0.2",
+    "@vi.son/components": "file:../components",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "three": "^0.122.0"
